--- a/css-sass/view/_overview.scss
+++ b/css-sass/view/_overview.scss
@@ -352,50 +352,3 @@
 		}
 	}
 }
-
-.avatar-hover {
-	position:absolute;
-	left:0;
-	top:0;
-	width:100%;
-	height:98%;
-	background:rgba(0,0,0,0.6);
-	opacity:0;
-	-webkit-transition: all 0.3s ease-in-out;
-  -moz-transition: all 0.3s ease-in-out;
-  -o-transition: all 0.3s ease-in-out;
-  transition: all 0.3s ease-in-out;
-	-webkit-backface-visibility: hidden;
-	.hover-text {
-		width:100%;
-		height:100%;
-		display:table;
-		span {
-			height:100%;
-			width:100%;
-			vertical-align:middle;
-			display:table-cell;
-		}
-		p {
-			text-align:center;
-			color:#fff;
-			margin:0;
-			padding:0;
-			line-height:120%;
-			&.hover-name {
-				font-size:32px;
-				font-family: 'Apercu';
-				font-weight:700;
-			}
-			&.hover-info {
-				font-size:14px;
-				font-family: 'Apercu';
-				font-weight:400;
-			}
-		}
-	}
-}
-
-.avatar-flag:hover .avatar-hover {
-	opacity:1;
-}
