--- a/css-sass/view/animation/_urine.scss
+++ b/css-sass/view/animation/_urine.scss
@@ -37,7 +37,7 @@
 				width: 100%;
 				height: 100%;
 
-				background: url("../images/animation/urine/pee@2x.png") no-repeat rgba(0, 0, 0, 0);
+				background: url("../images/animation/urine/pee@2x.png") no-repeat;
 				background-size: 100%;
 			}
 		}
