--- a/css-sass/view/subtest/_range-group.scss
+++ b/css-sass/view/subtest/_range-group.scss
@@ -252,7 +252,8 @@
             }
 
             .range {
-                background-color: rgba(215, 219, 227, 0.5);
+                background-color: #D7DBE3;
+                @include opacity(0.5);
             }
         }
 
