--- a/css-sass/view/widget/_busy.scss
+++ b/css-sass/view/widget/_busy.scss
@@ -4,26 +4,37 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background:rgba(255,255,255,.9);
     z-index: 100000;
     display: none; /* hidden by default */
-	opacity:1 !important;
+
+	.bg {
+		position: absolute;
+		top: 0;
+		left: 0;
+
+		width: 100%;
+		height: 100%;
+
+		background-color: white;
+		@include opacity(0.9);
+	}
 
 	.widget {
 		height:60px;
 		width:346px;
 		margin:0 auto;
 		margin-top:250px;
+		position: relative;
 		img {
 			width:87px;
 			height:26px;
 			float:left;
 		}
 		span {
+			@include secondaryFont;
 			float:left;
 			font-size:28px;
 			color:#333;
-			font-family: 'Apercu';
 			font-weight:700;
 			height:28px;
 			line-height:28px;
